--- a/Swimmer_customer/app/src/main/res/layout/fragment_order_detail.xml
+++ b/Swimmer_customer/app/src/main/res/layout/fragment_order_detail.xml
@@ -49,9 +49,8 @@
                 android:id="@+id/recyclerViewOrderDetail"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_weight="30"/>
-                <!--android:src="@tools:sample/avatars"-->/>
-
+                android:layout_weight="30"
+                tools:src="@tools:sample/avatars" />
 
 
             <LinearLayout
