--- a/Swimmer_customer/app/src/main/res/layout/row_order_detail.xml
+++ b/Swimmer_customer/app/src/main/res/layout/row_order_detail.xml
@@ -8,7 +8,7 @@
     <ImageView
         android:id="@+id/imageView4"
         android:layout_width="0dp"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:layout_weight="30"
         app:srcCompat="@drawable/broken_image_24px" />
 
